// Copyright 2016-2018, Pulumi Corporation.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "google/protobuf/empty.proto";
import "pulumi/plugin.proto";
import "pulumi/language.proto";

package pulumirpc.engine;

option go_package = "github.com/pulumi/pulumi/sdk/v3/proto/go/engine";

// EngineInterface is the interface to the core pulumi engine, it is used by both the CLI and the automation
// API to run all core commands. This is _highly_ experimental and currently subject to breaking changes without warning.
service Engine {
    // About returns information about the pulumi engine, and the current workspace.
    rpc About(AboutRequest) returns (AboutResponse) {}
}

message AboutRequest {
    string stack = 1;
    bool transitiveDependencies = 2;
}

message AboutBackend {
    string name = 1;
    string url = 2;
    string user = 3;
    repeated string organizations = 4;
}

message AboutState {
    string type = 1;
    string urn = 2;
}

message AboutStack {
    string name = 1;
    repeated AboutState resources = 2;
    repeated AboutState pendingOperations = 3;
}

message AboutResponse {
    string version = 1;
    string goVersion = 2;
    string goCompiler = 3;

    repeated pulumirpc.PluginDependency plugins = 4;
    string runtime = 5;
    pulumirpc.AboutResponse language = 6;
    repeated pulumirpc.DependencyInfo dependencies = 7;
    AboutBackend backend = 8;
    AboutStack stack = 9;

    repeated string errors = 10;
}
